16.aws_ec2_init_springboot.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Helper Scripts demo

Parameters:
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Default: USWest1KeyPair

Resources:
  MySecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: MY SG with port 22 and 8080 inbound
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0      
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0 
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0 

  MyVMInstance:
    Type: AWS::EC2::Instance
    Metadata:
      Comment: Deploy a simple tomcat Application
      AWS::CloudFormation::Init:
        configSets: 
          Install: 
            - App1
        App1:
          packages: 
            yum:
              java-1.8.0-openjdk.x86_64: []
              java-1.8.0-openjdk-devel: []
          groups:
            groupone: {}
            grouptwo: 
              gid: "501"
          users:
            user1:
              groups:
                - groupone
                - grouptwo
              uid: "501"
              homeDir: "/tmp"
          sources:
            /tmp: "https://springmusicanitha.s3-us-west-1.amazonaws.com/mkyong.war.zip"
          files:
            "/etc/cfn/cfn-hup.conf":
              content: !Sub |
                [main]
                stack=${AWS::StackId}
                region=${AWS::Region}
                interval=7
              mode: "000400"
              owner: "root"
              group: "root"
            "/etc/cfn/hooks.d/cfn-auto-reloader.conf":
              content: !Sub | 
                [cfn-auto-reloader-hook]
                triggers=post.update
                path=Resources.MyVMInstance.Metadata.AWS::CloudFormation::Init
                action=/opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource MyVMInstance --region ${AWS::Region}
              mode: "000400"
              owner: "root"
              group: "root"
          commands:
            test1:
              command: "chmod 755 mkyong.war"
              cwd: "/tmp"
            test2:
              command: "sudo yum -y erase java-1.7.0-openjdk.x86_64"
              cwd: "~"
            test3:
              command: "java -jar mkyong.war StartWebApplication.java"
              cwd: "/tmp"
    Properties:
      ImageId: ami-04bc3da8f14823e88
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      SecurityGroups:
        - !Ref MySecurityGroup
      UserData:
        "Fn::Base64":
          !Sub | 
            #!/bin/bash
            sudo su
            yum update -y aws-cfn-bootstrap
            /opt/aws/bin/cfn-init -s ${AWS::StackId} -r MyVMInstance --configsets Install --region ${AWS::Region} || error_exit 'Failed to run cfn-init'
            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackId} --resource MyVMInstance --region ${AWS::Region}
            /opt/aws/bin/cfn-hup || error_exit 'Failed to start cfn-hup'

Outputs:
  AppURL:
    Description: Application URL to access
    Value: !Sub 'http://${MyVMInstance.PublicDnsName}:8080/'
